--- a/.env
+++ b/.env
@@ -1,1 +1,12 @@
-.env.example
+# Make sure to change this to your own random string of 32 characters (https://docs.typebot.io/self-hosting/deploy/docker#2-add-the-required-configuration)
+ENCRYPTION_SECRET=GRgCKHQo/I5WwfFZ2ZJe8hkXhB89mCdY
+
+DATABASE_URL=postgresql://postgres:typebot@typebot-db:5432/typebot
+
+NODE_OPTIONS=--no-node-snapshot
+
+NEXTAUTH_URL=http://lkogsg4sow0ow88kw4g8w048.172.31.59.171.sslip.io
+NEXT_PUBLIC_VIEWER_URL=http://lkogsg4sow0ow88kw4g8w048.172.31.59.171.sslip.io
+
+ADMIN_EMAIL=
+# For more configuration options check out: https://docs.typebot.io/self-hosting/configuration
