--- a/.env
+++ b/.env
@@ -5,8 +5,11 @@ DATABASE_URL=postgresql://postgres:typebot@typebot-db:5432/typebot
 
 NODE_OPTIONS=--no-node-snapshot
 
-NEXTAUTH_URL=http://zgoc44wcok4cw04o040gcsg0.172.31.59.171.sslip.io
-NEXT_PUBLIC_VIEWER_URL=http://wo4wkgokog4g8k4o44ckgkgg.172.31.59.171.sslip.io
+NEXTAUTH_URL=
+NEXT_PUBLIC_VIEWER_URL=
 
 ADMIN_EMAIL=
+DEBUG=true
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
 # For more configuration options check out: https://docs.typebot.io/self-hosting/configuration
